<resources>
    <string name="app_name">GymTime</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="please_select_an_hour">Please select an hour</string>
    <string name="please_select_a_workout_type">Please select a workout type</string>
    <string name="please_select_a_workout_location">Please select a workout location</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_all_items">Are you sure you want to delete all items?</string>
    <string name="items_deleted">items deleted</string>
    <string name="yes">Yes</string>
    <string name="alone">Alone</string>
    <string name="permission_required">Permission Required</string>
    <string name="contacts_access_is_required_for_this_feature_please_grant_the_permission">Contacts access is required for this feature. Please grant the permission.</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="contacts_access_has_been_permanently_denied_please_enable_it_in_the_app_settings">Contacts access has been permanently denied. Please enable it in the app settings.</string>
    <string name="open_settings">Open Settings</string>
    <string name="about_this_app">About This App</string>
    <string name="app_info">This workout app enables users to add new workout events, select gyms based on chosen cities, and pick a partner from their contacts list. Additionally, it provides seamless navigation to the gym using Google Maps.</string>
    <string name="ok">OK</string>
    <string name="workout_session_scheduled_on">"Workout session scheduled on "</string>
    <string name="at">", at "</string>
    <string name="the_gym_is_located_at">". The gym is located at "</string>
    <string name="enjoy_your_workout_remember_every_step_brings_you_closer_to_your_goal">" .  Enjoy your workout! Remember, every step brings you closer to your goal."</string>
    <string name="with_your_partner">" with your partner, "</string>
    <string name="location_access_is_required_for_this_feature_please_grant_the_permission">Location access is required for this feature. Please grant the permission.</string>
    <string name="location_access_has_been_permanently_denied_please_enable_it_in_the_app_settings">Location access has been permanently denied. Please enable it in the app settings.</string>
    <string name="please_choose_at_least_one_city">Please choose at least one city</string>
    <string name="cardio">Cardio</string>
    <string name="strength">Strength</string>
    <string name="flexibility">Flexibility</string>
    <string name="balance">Balance</string>
    <string name="private_gym_holon">Private Gym - Holon</string>
    <string name="crossfit_holon">Crossfit - Holon</string>
    <string name="icon_holon">ICON - Holon</string>
    <string name="space_holon">Space - Holon</string>
    <string name="icon_tel_aviv">ICON - Tel Aviv</string>
    <string name="crossfit_tel_aviv">Crossfit - Tel Aviv</string>
    <string name="gordon_gym_tel_aviv">Gordon Gym - Tel Aviv</string>
    <string name="profit_tel_aviv">Profit - Tel Aviv</string>
    <string name="profit_bat_yam">Profit - Bat Yam</string>
    <string name="sea_bat_yam">SEA+ - Bat Yam</string>
    <string name="crossfit_bat_yam">CrossFit - Bat Yam</string>
    <string name="go_active_bat_yam">GO Active - Bat Yam</string>
    <string name="ha_melakha_st_18_holon">Ha-Melakha St 18, Holon</string>
    <string name="rehov_hamerkava_38_holon">Rehov HaMerkava 38, Holon</string>
    <string name="harokmim_st_26_holon">Harokmim St 26, Holon</string>
    <string name="ahad_ha_am_st_9_tel_aviv_yafo">Ahad Ha\'Am St 9, Tel Aviv-Yafo</string>
    <string name="hayarkon_st_167_tel_aviv_yafo">HaYarkon St 167, Tel Aviv-Yafo</string>
    <string name="eliezer_peri_st_14_tel_aviv_yafo">Eliezer Peri St 14, Tel Aviv-Yafo</string>
    <string name="carlebach_st_18_tel_aviv_yafo">Carlebach St 18, Tel Aviv-Yafo</string>
    <string name="haharoshet_st_11_bat_yam">HaHaroshet St 11, Bat Yam</string>
    <string name="derech_ben_gurion_136_bat_yam">Derech Ben Gurion 136, Bat Yam</string>
    <string name="ehud_kinnamon_st_23_bat_yam">Ehud Kinnamon St 23, Bat Yam</string>
    <string name="yoseftal_st_92_bat_yam">Yoseftal St 92, Bat Yam</string>
    <string name="giv_at_hatahmoshet_st_27_holon">Giv\'at HaTahmoshet St 27, Holon</string>
    <string name="workout_location">Workout Location</string>
    <string name="select_date">Select Date</string>
    <string name="select_hour">Select Hour</string>
    <string name="select_partner">Select Partner</string>
    <string name="workout_type">Workout Type</string>
    <string name="pick_image">Pick image</string>
    <string name="add_workout">Add Workout</string>
    <string name="open_on_google_maps">Open on Google Maps</string>
    <string name="save">Save</string>
    <string name="my_workouts">My Workouts</string>
    <string name="preferences">Preferences</string>
    <string name="date_hour">Date || Hour</string>
    <string name="partner">Partner</string>
    <string name="location_type">Location || Type</string>
    <string name="info">Info</string>
    <string name="delete_all">Delete all</string>
    <string name="appearance">Appearance</string>
    <string name="select_theme">Select Theme</string>
    <string name="select_the_theme_you_want_in_your_app">Select the app theme you want</string>
    <string name="location">Location</string>
    <string name="select_the_cities_you_want_in_your_app">Select the cities where you would like to workout</string>
    <string name="cities">Cities</string>
</resources>